Tue Mar  2 11:16:03 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/BMakeWorkspaceCreator.pm:
        * bin/MakeProjectCreator/modules/BorlandWorkspaceCreator.pm:
        * bin/MakeProjectCreator/modules/NMakeWorkspaceCreator.pm:

          Avoid looping and using substr to count instances of '/', use tr
          instead.

        * bin/MakeProjectCreator/modules/Creator.pm:
        * bin/MakeProjectCreator/modules/Driver.pm:
        * bin/MakeProjectCreator/modules/FeatureParser.pm:
        * bin/MakeProjectCreator/modules/Parser.pm:
        * bin/MakeProjectCreator/modules/ProjectCreator.pm:
        * bin/MakeProjectCreator/modules/StringProcessor.pm:
        * bin/MakeProjectCreator/modules/TemplateInputReader.pm:
        * bin/MakeProjectCreator/modules/TemplateParser.pm:
        * bin/MakeProjectCreator/modules/VC7ProjectCreator.pm:

          Performed various optimizations to gain roughly a 10% increase in
          performance.

        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:

          Rewrote the workspace generation code to be similar to the other
          make based creators and reduced the size of the generated
          workspace.

        * bin/MakeProjectCreator/modules/Version.pm:

          Incremented the version number.

        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:

          Fixed two bugs in the workspace creator:

          1) Using implicit as a scoped assignment caused project files to
             be added multiple times which is an error.
          2) When a project name with characters that could be special
             characters in regular expressions are not used within a
             workspace, but are referenced by othere projects, the code
             would bomb out.

Mon Mar  1 18:03:22 2004  Steve Huston  <shuston@riverace.com>

        * tests/Multicast_Test_IPV6.cpp: Added #include "ace/Min_Max.h" to
          see ACE_MIN, ACE_MAX.
